# mambo

./: .gitignore  CONTRIBUTING.md  README.md  README.md.eng  west.yml
.github/workflows/: ci.yml  pr-check.yml
Documents/motor/: api.md  devicetree.md
Documents/updates/: ares_uart_usart1_921600_update.md  ares_usb_transport_update.md
Documents/vcan/: IMPLEMENTATION.md  readme.md
Documents/zephyr/: radxa_workspace_setup.md
app/2026_R2usb_armv2/: app.overlay  prj.conf  suspension_node.py
drivers/: CMakeLists.txt  Kconfig
drivers/chassis/: chassis.c  chassis.h
drivers/motor/: CMakeLists.txt  Kconfig  README.md
drivers/transfer/: ares_sbus.c
drivers/vcan/: CMakeLists.txt  Kconfig  spi_can_mfd.c  spi_can_mfd.h  spi_can_node.c
drivers/wheel/: steerwheel.c
dts/bindings/: vendor-prefixes.txt
lib/ares/: CMakeLists.txt  Kconfig
src/: prompt.ini  vcan_dual_board_debug.md
src/2025_3wheel_R1s/: prj.conf
src/2025_3wheel_R1s_low copy/: app.overlay  prj.conf
src/2026_R2/: app.overlay  prj.conf
src/2026_R2debug/: prj.conf
src/2026_R2sbus/: CMakeLists.txt  app.overlay
src/2026_R2usb_arm/: README.md  app.overlay  prj.conf  suspension_node.py
src/2026_R2usb_armv2/: CMakeLists.txt  README.md  app.overlay  prj.conf  suspension_node.py
src/dm_can_sched_demo/: CMakeLists.txt  README.md  app.overlay  prj.conf
src/dm_can_sched_demo/src/: main.c
src/ws2812_strip/: CMakeLists.txt  Kconfig  ws2812_strip.c
src/ws2812_strip/dts/: ws2812_strip.overlay
src/ws2812_strip/include/: ws2812_strip.h
template/: CMakeLists.txt  README.md  prj.conf
(+222 files in other folders)
